--- a/Assets/UnityTestTools/changelog.txt
+++ b/Assets/UnityTestTools/changelog.txt
@@ -1,3 +1,30 @@
+Version 1.5.4
+
+- APIs updates
+
+Version 1.5.3
+
+- Bug fixes 
+
+Version 1.5.2
+
+- Bug fixes 
+- Minor improvments
+
+Version 1.5.1
+
+- removed redundant and not applicable options
+- fixed 5.0 related bugs
+
+Version 1.5.0
+
+- Unity 5 related compatibility changes
+
+Version 1.4.6
+
+- Bug fixes 
+- Minor improvments
+
 Version 1.4.5
 
 - Added "Pause on test failure" option for integration tests
